@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-24T08:26:17Z",
+  "timestamp" : "2022-11-25T01:48:19Z",
   "count_outdated" : 891,
   "uniques_outdated" : 468,
-  "count" : 916,
+  "count" : 917,
   "uniques" : 482,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-11-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
